--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "isolatedModules": true,
     "lib": ["ESNext"],
     "module": "NodeNext",
+    "moduleResolution": "NodeNext",
     "outDir": "./dist",
     "rootDir": "./src",
     "strict": true,
