--- a/package.json
+++ b/package.json
@@ -1,18 +1,14 @@
 {
   "name": "tsc-nodenext",
-  "type": "module",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "installBecauseCodesandboxHasNoArbitraryTerminalInput": "npm install"
   },
   "devDependencies": {
-    "@types/node": "^17.0.34",
-    "typescript": "^4.7.1-rc"
-  },
-  "overrides": {
-    "typescript": "^4.7.1-rc"
+    "@types/node": "^20.6.0",
+    "typescript": "^5.1.16"
   },
   "dependencies": {
-    "decimal.js": "^10.3.1",
-    "is-plain-object": "^5.0.0"
+    "grid-engine": "2.37.0"
   }
 }
